# stalker_auto-trans-tool_remake

./: .gitignore  README.md  app.py  blackListGenerater.py  copyFileWIthIllegalName.py  pyproject.toml  uselessFontIniCompensate.py  xRayTrans.py
ltx_tc/: w_colt1911.ltx
otherTools/CN_Pack_Generator/: Generator.bat  Generator_noRequire_MSYH_ttf.bat  Readme.txt  config.ini
otherTools/CN_Pack_Generator/Data/: Firefly.License.en.txt  Firefly.License.zh.txt  _ascii_char.txt  fonts_cop.ltx  fonts_soc.ltx  fonts_stcs.ltx  localization_soc.ltx  localization_stcs.ltx  strings.js  strings.txt  strings_936.txt  strings_950.txt
otherTools/Stalker_Unpacker_2017/: unpack.bat
webTranslator/: TranslatorImpl.py  __init__.py  entityDefinition.py
xRayXmlParser/: __init__.py  entityDefinition.py  xRayTextAnalyzer.py  xmlFileGenerator.py  xmlxReader.py
